# greenatom-test

./: .gitignore  README.md  alembic.ini  pyproject.toml
.configs/: app.example.toml  test.toml
.github/workflows/: lint_test.yaml
src/greenatom_task/: __main__.py  app_setup.py  config.py  consts.py
src/greenatom_task/robot/: robot_impl.py
src/greenatom_task/web/: app_setup.py  config.py  consts.py  depends_stub.py  dto.py  models.py
src/greenatom_task/web/database/: dependencies.py  mixins.py  sa_utils.py
src/greenatom_task/web/migrations/: env.py
src/greenatom_task/web/migrations/versions/: 00e80e522428_initial.py
src/greenatom_task/web/robot/: adapters.py  dependencies.py  dto.py  exceptions.py  facade.py  models.py  router.py  service.py
tests/integration/: conftest.py  test_get_reports.py  test_start_robot.py  test_stop_robot.py
tests/unit/: conftest.py  test_get_reports.py  test_start_robot.py  test_stop_robot.py
